--- a/install_httpd.yml
+++ b/install_httpd.yml
@@ -4,7 +4,7 @@
   become: true
   tasks:
 
-  - name: Install httpd package
+  - name: Install httpd and php packages
     dnf:
       name: 
         - httpd
